--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file=.env --import=tsx --watch server.mts"
+    "dev": "node --env-file=.env --import=tsx --watch server.mts",
+    "prettier": "prettier --write .",
+    "prepare": "husky",
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +18,26 @@
     "express": "^4.18.2",
     "faker": "^6.6.6",
     "mongoose": "^8.1.0",
-    "prettier": "^3.2.4",
     "ts-migrate-mongoose": "^3.5.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
-    "nodemon": "^3.0.3",
+    "husky": "^9.0.1",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,mts}": [
+      "npx prettier"
+    ]
   }
 }
