--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,1 @@
-DB_URI=mongodb://localhost:27017/webxwiz?replicaSet=rs0&directConnection=true
+DB_URI=mongodb://mongo1:27017/webxwiz?replicaSet=rs0&directConnection=true
